--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Cream of the Crop App">
+    <meta name="author" content="Michael Nash">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>The Cream of the Crop</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
